--- a/deploy/styles.css
+++ b/deploy/styles.css
@@ -364,7 +364,7 @@ ul li {
 .container-grid {
   display: grid;
   grid-template-areas: ". grid-content .";
-  grid-template-columns: 15px auto 15px;
+  grid-template-columns: auto 50% auto;
   height: 100vh;
 }
 @media (min-width: 1200px) {
@@ -420,17 +420,17 @@ textarea {
     Footer
 ============= */
 #preloader-container {
-  display: grid;
-  padding: 100px;
-  grid-template-areas: ". grid-content .";
-  grid-template-columns: auto 40% auto;
-  height: 100vh;
+  position: absolute;
+  height: 50%;
+  width: 50%;
 }
-@media (min-width: 1200px) {
-  #preloader-container {
-    grid-template-columns: auto 400px auto;
-  }
+#preloader-container div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
-#preloader-container > div {
-  grid-area: grid-content;
+#preloader-container svg {
+  height: 50%;
+  width: 50%;
 }
